fix gap

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -367,7 +367,7 @@ header, .nav{
 .general-validation,
 .gps-section{
   text-align:center;
-  margin-bottom:var(--sp-6);
+  /*margin-bottom:var(--sp-6);*/
 }
 
 .species-item{
@@ -631,7 +631,7 @@ header, .nav{
 /* ---------- 11) UTILITIES ---------- */
 .brand {
   text-align: center;
-  margin-top: var(--sp-6);
+  /*margin-top: var(--sp-6);*/
 }
 .brand img {
   max-width: 180px;
